# intro_cg_raytracer

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.C  ProjectNotes1.txt  ProjectNotes3.txt  README.1.txt  README.2.txt  README.3.txt  README.4.txt  README.5.txt  README.md  assign1.kdev4  assign4_3D.c  assign4_3D_line.c  main-test.cpp  main.cpp  scene_final.tif  test.icf  test2.icf
images/: .directory  eeyore.tifstat  eeyore2.tifstat  eeyore3.tif  eeyore3.tifstat  eeyore4.tif  eeyore4.tifstat  play.tifstat  play2.tifstat  play3.tifstat  playpal.tifstat  playrgb.tif  playrgb.tifstat  pooh.tifstat  pooh_comp.tif  pooh_le.tif  sky_bw.tif  sky_g.tif  sky_rgb.tif
include/X11/: Xlib.h
include/X11/Xtrans/: Xtranssock.c
include/X11/extensions/: compositeproto.h
include/Xm/: ArrowB.h  ArrowBG.h  ArrowBGP.h  ArrowBP.h  AtomMgr.h  BaseClassP.h  BulletinB.h  BulletinBP.h  CacheP.h  CascadeB.h  CascadeBG.h  CascadeBGP.h  CascadeBP.h  Command.h  CommandP.h  CutPaste.h  CutPasteP.h  DesktopP.h  DialogS.h  DialogSEP.h  DialogSP.h  Display.h  DisplayP.h  DragC.h  DragCP.h  DragDrop.h  DragIcon.h  DragIconP.h  DragOverS.h  DragOverSP.h  DrawP.h  DrawingA.h  DrawingAP.h  DrawnB.h  DrawnBP.h  DropSMgr.h  DropSMgrP.h  DropTrans.h  DropTransP.h  ExtObjectP.h  (+79 more)
mod_3d/: CMakeLists.txt  DrawTransformed.cpp  DrawTransformed.h  lines.cpp  lines.h
mod_base/: CMakeLists.txt  CommandHandle.cpp  CommandHandle.h  FunctionCommand.cpp  FunctionCommand.h  ModuleCommand.cpp  ModuleCommand.h
mod_dummy/: CMakeLists.txt  DummyHandle.cpp  DummyHandle.h
mod_filter/: CMakeLists.txt  ImageResize.cpp  ImageResize.h
mod_geo/: Box.cpp  Box.h  CMakeLists.txt  RGBscale.cpp  RGBscale.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
mod_matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  TransformStack.cpp  TransformStack.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
mod_ray/: CMakeLists.txt  ILight.cpp  ILight.h  Light.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Screen.cpp  Screen.h  ScreenNull.h  ScreenOrtho.cpp  ScreenOrtho.h  ScreenPersp.cpp  ScreenPersp.h
mod_tiff/: CMakeLists.txt  IFD_Entry.cpp  IFD_Entry.h  TiffIO.cpp  TiffIO.h
scripts/: .directory  ray_box0.cli  ray_box1.cli  ray_color_light.cli  ray_color_refl.cli  ray_persp.cli  ray_scene.cli  ray_test0.cli  ray_test1.cli  ray_test2.cli  ray_test3.cli  ray_test4.cli  ray_triangle0.cli  ray_triangle1.cli  scale0.cli  scale1.cli  scale2.cli  scale_rpt.cli  test.icf  test2.icf  tiff_rsw.cli  tiff_rw_sample.cli  tiff_rw_sample2.cli  tiff_stat_all.cli
scripts/p4/: checklist.txt  orientSY.cli  p4all.cli
specs/: Tiff_Tag_Names
